infra/k8s/deneme/deneme.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket
  template:
    metadata:
      labels:
        app: ticket
    spec:
      containers:
        - name: ticket
          image: ayberkdd/ticket
          
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-srv
spec:
  selector:
    app: ticket
  ports:
    - name: ticket
      protocol: TCP
      port: 3000
      targetPort: 3000
      
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
spec:
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: ayberkdd/order
---
apiVersion: v1
kind: Service
metadata:
  name: order-srv
spec:
  selector:
    app: order
  ports:
  - name: order
    protocol: TCP
    port: 3000
    targetPort: 3000
